k8s/movie-watchlist-deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: movietime
  name: movietime
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: movietime
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: movietime
  name: movietime
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movietime
  template:
    metadata:
      labels:
        app: movietime
    spec:
      containers:
      - image: <your repo>/movie-library:1.0.0
        name: movie-library
        ports:
        - containerPort: 80
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 5m
            memory: 128Mi
          limits:
            cpu: 15m
            memory: 256Mi
...
